rm text-align left from everything, interferes with lots of rules being made in wp4.css. Fixes #meta1215, after refresh
git-svn-id: https://meta.svn.wordpress.org/sites/trunk@1863 74240141-8908-4e6f-9713-ba540dce6ec7

--- a/wordpress.org/public_html/style/codex-wp4.css
+++ b/wordpress.org/public_html/style/codex-wp4.css
@@ -1,6 +1,5 @@
 html * {
 	font-variant: normal !important;
-	text-align: left !important;
 }
 
 .printfooter, hr, .urlexpansion {
